# src/main/kotlin/com/southsun/refapp/models/Request.kt
@@ -1,7 +1,7 @@
-package com.southsun.refapp.models
-
-data class Request(
-    private val customerId: String,
-    private val month: String?,
-    private val year: String
-)
+//package com.southsun.refapp.models
+//
+//data class Request(
+//    private val customerId: String,
+//    private val month: String?,
+//    private val year: String
+//)
